<resources>
    <string name="app_name">YuGiOhDeckBuilder</string>
    <string name="fetch_all_cards">Search All Cards</string>
    <string name="fetch_named_cards">Search By Name</string>
    <string name="fetch_monster_cards">Search Monster Cards</string>
    <string name="fetch_spell_cards">Search Spell Cards</string>
    <string name="fetch_trap_cards">Search Trap Cards</string>
    <string name="dismiss">Dismiss</string>
    <string name="monster">Monster</string>
    <string name="spell">Spell</string>
    <string name="trap">Trap</string>
    <string name="no_type">No Filter</string>

    <!--  Prices  -->
    <string name="view_prices">Prices</string>
    <string name="price_cardmarket">Card Market: €%s</string>
    <string name="price_coolstuff">Cool Stuff: $%s</string>
    <string name="price_tcgplayer">TCG Player: $%s</string>
    <string name="price_ebay">eBay: $%s</string>
    <string name="price_amazon">Amazon: $%s</string>
    <string name="unavailable">Unavailable</string>

    <!--  Card Sets  -->
    <string name="view_card_sets">Card Sets</string>
    <string name="card_set_rarity">Set Rarity: %s</string>
    <string name="card_set_price">Set Price: $%s</string>
    <string name="card_set_list">Card Set List</string>
    <string name="card_set_empty">No sets found</string>

    <!--  Ban List   -->
    <string name="view_ban_list">Ban List</string>
    <string name="ban_tcg">TCG: %s</string>
    <string name="ban_ocg">OCG: %s</string>
    <string name="ban_goat">Goat: %s</string>
    <string name="ban_never_banned">This card was never banned</string>
    <string name="ban_not_banned_here">Not banned</string>
    
    <!-- Filter Dialog   -->
    <string name="selected_filter_title">Selected Filters</string>
    <string name="selected_filter_change">Change filters</string>
    <string name="selected_filter_submit">Search with these</string>
    <string name="selected_filter_empty_button">Yes</string>
    <string name="selected_filter_empty_title">No Filters Selected</string>
    <string name="selected_filter_empty_list">Search All Cards?</string>

    <!-- Logout Dialog   -->
    <string name="logout_title">Is this goodbye?</string>
    <string name="logout_cancel">Cancel</string>
    <string name="logout_confirm">Log Me Out</string>
    <string name="logout_yuser">Log out as %s?</string>

    <string name="main_deck">Main Deck</string>
    <string name="extra_deck">Extra Deck</string>

    <!--  Login  -->
    <string name="login_title_text">YuGiOh Deck Builder</string>
    <string name="login_enter_username">Username</string>
    <string name="login_enter_password">Password</string>
    <string name="login_begin_building">Begin Building</string>
    <string name="login_save_checkbox">Save login?</string>
    <string name="login_new_account">New? Create an account!</string>
    <string name="login_not_found">Account not found</string>
    <string name="login_signed_in">Welcome %s, let\'s get building!</string>

    <!--  Create Account  -->
    <string name="account_email">Email</string>
    <string name="account_repeat_password">Repeat Password</string>
    <string name="account_create_title">Create Account</string>
    <string name="account_submit_btn">Submit</string>
    <string name="account_validate_password">Passwords need to match</string>
    <string name="account_validate_email">Invalid email</string>
    <string name="account_existing_email">Email is already used</string>
    <string name="account_existing_username">Username is already used</string>
    <string name="account_successful_submission">%s, your account is created</string>

    <string name="account_username_credentials">Must not have \'.\', \'#\', \'$\', \'[\', or \']\' </string>

    <!-- Menu -->
    <string name="menu_profile">Profile</string>
    <string name="menu_decks">Decks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!--  Others to Categorize  -->
    <string name="filter_by">Filter By</string>
    <string name="name">Name</string>
    <string name="enter_card_name">Enter Card Name</string>
    <string name="please_enter_card_name">Please Enter Card Name</string>
    <string name="error_network">Failed network response</string>
    <string name="error_response">Empty Response</string>
    <string name="cannot_find">Cannot Find Name</string>
    <string name="error_no_card_type">Please Select A Card Type</string>
    <string name="selected_card_for_animation">This Card</string>

    <!--  Parameter Arrays  -->
    <!--  Monster  -->
    <!--  Main & Extra types use the same filter, should be separated -->
    <string-array name="main_types">
        <item>Effect Monster</item>
        <item>Flip Effect Monster</item>
        <item>Flip Tuner Effect Monster</item>
        <item>Gemini Monster</item>
        <item>Normal Monster</item>
        <item>Normal Tuner Monster</item>
        <item>Pendulum Effect Monster</item>
        <item>Pendulum Flip Effect Monster</item>
        <item>Pendulum Normal Monster</item>
        <item>Pendulum Tuner Effect Monster</item>
        <item>Ritual Effect Monster</item>
        <item>Ritual Monster</item>
        <item>Spirit Monster</item>
        <item>Toon Monster</item>
        <item>Tuner Monster</item>
        <item>Union Effect Monster</item>
    </string-array>

    <string-array name="extra_types">
        <item>Fusion Monster</item>
        <item>Link Monster</item>
        <item>Pendulum Effect Fusion Monster</item>
        <item>Skill Card</item>
        <item>Synchro Monster</item>
        <item>Synchro Pendulum Effect Monster</item>
        <item>Synchro Tuner Monster</item>
        <item>XYZ Monster</item>
        <item>XYZ Pendulum Effect Monster</item>
    </string-array>
    <string-array name="monster_races">
        <item>Races</item>
        <item>Aqua</item>
        <item>Beast</item>
        <item>Beast-Warrior</item>
        <item>Creator-God</item>
        <item>Cyberse</item>
        <item>Dinosaur</item>
        <item>Divine-Beast</item>
        <item>Dragon</item>
        <item>Fairy</item>
        <item>Fiend</item>
        <item>Fish</item>
        <item>Insect</item>
        <item>Machine</item>
        <item>Plant</item>
        <item>Psychic</item>
        <item>Pyro</item>
        <item>Reptile</item>
        <item>Rock</item>
        <item>Sea Serpent</item>
        <item>SpellCaster</item>
        <item>Thunder</item>
        <item>Warrior</item>
        <item>Winged Beast</item>
    </string-array>
    <string-array name="levels">
        <item>Rank</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>
    <string-array name="attributes">
        <item>Attributes</item>
        <item>Dark</item>
        <item>Divine</item>
        <item>Earth</item>
        <item>Fire</item>
        <item>Light</item>
        <item>Water</item>
        <item>Wind</item>
    </string-array>

    <!-- Spell   -->
    <string-array name="spell_races">
        <item>Spell Type</item>
        <item>Normal</item>
        <item>Field</item>
        <item>Equip</item>
        <item>Continuous</item>
        <item>Quick-Play</item>
        <item>Ritual</item>
    </string-array>

    <!-- Trap   -->
    <string-array name="trap_races">
        <item>Trap Type</item>
        <item>Normal</item>
        <item>Continuous</item>
        <item>Counter</item>
    </string-array>

    <!--  Languages  -->
    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Portuguese</item>
    </string-array>
</resources>

    <!--
    TODO
    archetype
    name filter
    -->