<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_title_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/m_puzzle_tilt"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintBottom_toTopOf="@id/tv_title_text"/>

    <TextView
        android:id="@+id/tv_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/modern_antiqua"
        android:textSize="35sp"
        android:text="@string/login_title_text"
        android:textColor="@color/black"
        android:shadowColor="@color/red"
        android:shadowDx="-5"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/iv_title_image"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintBottom_toTopOf="@id/til_login_username"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_enter_username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/til_login_username"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintStart_toStartOf="@id/gl_login_start">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_enter_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_login_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_login_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <CheckBox
        android:id="@+id/cb_login_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_save_checkbox"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="@id/til_password"/>

    <TextView
        android:id="@+id/tv_account_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/login_new_account"
        app:layout_constraintTop_toBottomOf="@id/cb_login_save"
        app:layout_constraintStart_toStartOf="@id/cb_login_save"
        app:layout_constraintEnd_toEndOf="@id/cb_login_save"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_begin_building"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"/>

    <Button
        android:id="@+id/btn_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="->"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>