<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_ground">

    <RadioGroup
        android:id="@+id/rg_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rb_monster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monster"/>
        <RadioButton
            android:id="@+id/rb_spell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell"/>
        <RadioButton
            android:id="@+id/rb_trap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trap"/>
        <RadioButton
            android:id="@+id/rb_no_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_type"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_spinners"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/spn_main_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/main_types"/>
        <Spinner
            android:id="@+id/spn_extra_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/extra_types"/>
        <Spinner
            android:id="@+id/spn_monster_races"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/monster_races"/>
        <Spinner
            android:id="@+id/spn_levels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/levels"/>
        <Spinner
            android:id="@+id/spn_attributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/attributes"/>
        <Spinner
            android:id="@+id/spn_spell_races"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spell_races"/>
        <Spinner
            android:id="@+id/spn_trap_races"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/trap_races"/>
    </LinearLayout>


    <Spinner
        android:id="@+id/spn_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/languages"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_search"
        app:layout_constraintStart_toStartOf="@id/btn_search"
        app:layout_constraintEnd_toEndOf="@id/btn_search"/>
    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetch_all_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--
    TODO 8 spinners
        Possible radio buttons for triggers the filters
        Select 'Monster' should only show monster card filters
        Select 'Spell' || 'Trap' should do the same respectively
    -->