<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:backgroundTint="@color/purple_200">

    <TextView
        android:id="@+id/tv_filter_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_filter_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_filter_alert_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_alert_title"
        tools:text="Type | Race | Level | Attribute" />

    <Button
        android:id="@+id/btn_filter_alert_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:textSize="12sp"
        android:text="@string/selected_filter_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_filter_alert_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_alert_list" />

    <Button
        android:id="@+id/btn_filter_alert_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:textSize="12sp"
        android:text="@string/selected_filter_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_filter_alert_dismiss"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_alert_list" />
</androidx.constraintlayout.widget.ConstraintLayout>
